Namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: ourcoolnamespace
  labels:
    istio-injection: enabled
