Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-app
  namespace: ourcoolnamespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-app
  template:
    metadata:
      labels:
        app: http-app
        version: v1
      annotations:
        proxy.istio.io/config: |
          holdApplicationUntilProxyStarts: true
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: http-app
                topologyKey: topology.kubernetes.io/zone
            - weight: 90
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: http-app
                topologyKey: kubernetes.io/hostname
      containers:
        - name: http-app
          image: naraka24e1/http-app:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "400m"
              memory: "300Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
