Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-app
  namespace: ourcoolnamespace
spec:
  type: ClusterIP
  selector:
    app: http-app
  sessionAffinity: None
  ports:
    - name: http-app
      protocol: TCP
      port: 80
      targetPort: 8080
