Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-app
  namespace: ourcoolnamespace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.example.com
      secretName: http-app-tls
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-app
                port:
                  number: 80
